--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
   * Refactor the word 'bucket' out of the code, it should be 'partition'
+  * Refactor code that does a readdir to use only one copy of the loop
+  * Double check we correctly convert all PVFS error codes
